--- a/ServiceComplex/Pages/_ViewImports.cshtml
+++ b/ServiceComplex/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using SaleInStore
-@namespace SaleInStore.Pages
+﻿@using ServiceComplex
+@namespace ServiceComplex.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
