--- a/ServiceComplex/Pages/SelectBranch.cshtml
+++ b/ServiceComplex/Pages/SelectBranch.cshtml
@@ -3,7 +3,7 @@
 @model             ServiceComplex.Pages.SelectBranchModel
 @{
     Layout = "_LateralLayout";
-    ViewData["Title"] = "خطای سرور داخلی";
+    ViewData["Title"] = "انتخاب شعبه";
 }
 
 <body class="maintanence text-center">
